# Chip8-Emulator

./: CMakeLists.txt
src/: cpu.c  cpu.h  display.c  display.h  main.c
